<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:title="Titel">

     <PreferenceCategory
         android:title="@string/preference_category_general_title"
         android:key="@string/preference_category_general_key">
             <EditTextPreference
                 android:title="@string/preference_login_username_title"
                 android:key="@string/preference_login_username_key"
                 android:summary="@string/preference_login_username_summary"
                 android:defaultValue="@string/preference_login_username_default"
                 android:inputType="number" />

             <EditTextPreference
                 android:title="@string/preference_login_password_title"
                 android:key="@string/preference_login_password_key"
                 android:summary="@string/preference_login_password_summary"
                 android:defaultValue="@string/preference_login_password_default"
                 android:inputType="numberPassword" />

        <SwitchPreference
            android:title="@string/preference_debugMode_title"
            android:key="@string/preference_debugMode_key"
            android:defaultValue="false"
            android:summaryOff="@string/preference_debugMode_summary_off"
            android:summaryOn="@string/preference_debugMode_summary_on"/>

         <!-- ToDo: extra settings should be availabe when debug mode is on -->
         <!-- ToDo: extra settings for modificated download period in seconds or minutes  -->

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_category_automatic_download_title"
        android:key="@string/preference_category_automatic_download_key">
            <SwitchPreference
                android:title="@string/preference_download_automatic_title"
                android:key="@string/preference_download_automatic_key"
                android:defaultValue="true"
                android:summaryOff="@string/preference_download_automatic_off"
                android:summaryOn="@string/preference_download_automatic_on"/>

        <oth_regensburg.automaticnewspaperdownloader.TimePreference
            android:title="@string/preference_download_time_title"
            android:key="@string/preference_download_time_key"
            android:summary="@string/preference_download_time_summary"
            android:persistent="true"
            android:defaultValue="@string/preference_download_time_default" />

        <SwitchPreference
            android:title="@string/preference_DownloadInWifiOnly_Title"
            android:key="@string/preference_DownloadInWifiOnly_key"
            android:defaultValue="true"
            android:summaryOff="@string/preference_DownloadInWifiOnly_summary_off"
            android:summaryOn="@string/preference_DownloadInWifiOnly_summary_on"/>

        <!-- //ToDo: evtl add costum download days -> RecurrencePicker from BetterPickers -->

        <SwitchPreference
            android:title="@string/preference_MoveFilesToSdcard"
            android:key="@string/preference_MoveFilesToSdcard_key"
            android:defaultValue="true"
            android:summaryOff="@string/preference_MoveFilesToSdcard_off"
            android:summaryOn="@string/preference_MoveFilesToSdcard_on"/>

        <EditTextPreference
            android:title="@string/preference_filestokeep_title"
            android:key="@string/preference_filestokeep_key"
            android:summary="@string/preference_filestokeep_summary"
            android:defaultValue="@string/preference_filestokeep_default"
            android:inputType="number" />

        <SwitchPreference
            android:title="@string/preference_enable_autostart_title"
            android:key="@string/preference_enable_autostart_key"
            android:defaultValue="true"
            android:summaryOff="@string/preference_enable_autostart_summary_off"
            android:summaryOn="@string/preference_enable_autostart_summary_on"/>

 </PreferenceCategory>

</PreferenceScreen>